--- a/index.html
+++ b/index.html
@@ -6,8 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PortfolioPage</title>
     <link rel="stylesheet" href="/style.css">
+    <script src="https://kit.fontawesome.com/97364d0a43.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <nav>
+        <h1>AyishaAlli.</h1>
+        <ul>
+            <a href="#"><li>ABOUT ME</li></a>
+            <div class="dropdown">
+                <a href=""><li class="dropbtn">PROJECTS<i class="fas fa-chevron-down"></i></li></a>
+                <div class="dropdownContent">
+                    <a class="dropdownItem" href="#">UXUI DESIGN</a>
+                    <a class="dropdownItem" href="#">FRONTEND</a>
+                </div>
+            </div>
+            <a href="#"><li>CONTACT ME</li></a>
+        </ul>
+    </nav>
     
 </body>
 </html>
