changed some class tags to ID tags

--- a/index.html
+++ b/index.html
@@ -14,15 +14,18 @@
         <ul>
             <a href="#"><li>ABOUT ME</li></a>
             <div class="dropdown">
-                <a href=""><li class="dropbtn">PROJECTS<i class="fas fa-chevron-down"></i></li></a>
+                <a href="#"><li class="dropbtn">PROJECTS<i class="fas fa-chevron-down"></i></li></a>
                 <div class="dropdownContent">
-                    <a class="dropdownItem" href="#">UXUI DESIGN</a>
-                    <a class="dropdownItem" href="#">FRONTEND</a>
+                    <a class="dropdownItem" href="#uxuiProjects">UXUI DESIGN</a>
+                    <a class="dropdownItem" href="#frontendProjects">FRONTEND</a>
                 </div>
             </div>
             <a href="#"><li>CONTACT ME</li></a>
         </ul>
     </nav>
-    
+    <div id="aboutMeSection"></div>
+    <div id="uxuiProjects"></div>
+    <div id="frontendProjects"></div>
+    <div id="ContactMe"></div>
 </body>
 </html>
