added responsive navbar

--- a/index.html
+++ b/index.html
@@ -11,15 +11,10 @@
 <body>
     <nav>
         <h1>AyishaAlli.</h1>
+        <i class="hamburger fas fa-bars"></i>
         <ul>
             <a href="#"><li>ABOUT ME</li></a>
-            <div class="dropdown">
-                <a href="#"><li class="dropbtn">PROJECTS<i class="fas fa-chevron-down"></i></li></a>
-                <div class="dropdownContent">
-                    <a class="dropdownItem" href="#uxuiProjects">UXUI DESIGN</a>
-                    <a class="dropdownItem" href="#frontendProjects">FRONTEND</a>
-                </div>
-            </div>
+            <a href="#"><li>PROJECTS</li></a>
             <a href="#"><li>CONTACT ME</li></a>
         </ul>
     </nav>
