worked on layout of navbar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
         <h1>AyishaAlli.</h1>
         <i class="hamburger fas fa-bars"></i>
-        <ul>
+        <ul class="navList">
             <a href="#"><li>ABOUT ME</li></a>
             <a href="#"><li>PROJECTS</li></a>
             <a href="#"><li>CONTACT ME</li></a>
@@ -22,5 +22,6 @@
     <div id="uxuiProjects"></div>
     <div id="frontendProjects"></div>
     <div id="ContactMe"></div>
+    <script src="/app.js"></script>
 </body>
 </html>
