--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <h1>AyishaAlli.</h1>
-        <i class="hamburger fas fa-bars"></i>
+        <i class="hidden hamburger fas fa-bars"></i>
         <ul class="navList">
             <a href="#"><li>ABOUT ME</li></a>
             <a href="#"><li>PROJECTS</li></a>
