added animation to title on page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
         </ul>
     </nav>
     <div class="aboutMeSection">
-            <h2 class="hello">Hello!</h2>
+            <h2 class="hello">
+                <span>H</span>
+                <span>e</span>
+                <span>l</span>
+                <span>l</span>
+                <span>o</span>
+                <span>!</span>
+            </h2>
             <p>Hey there, Thank you for stumbling across my website. My name is Ayisha Alli and I am a Junior Software Developer</p>
     </div>
         
