--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
         
         </div>
     <div id="ContactMe"></div>
+    <footer>
+
+    </footer>
     <script src="/app.js"></script>
 </body>
 </html>
