--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         </ul>
     </nav>
     <div class="aboutMeSection">
+        <div class="text">
             <h2 class="hello">
                 <span>H</span>
                 <span>e</span>
@@ -29,7 +30,13 @@
                 <span>o</span>
                 <span>!</span>
             </h2>
-            <p>Hey there, Thank you for stumbling across my website. My name is Ayisha Alli and I am a Junior Software Developer</p>
+            <p id="introParagraph">My name is Ayisha Alli and I am a Junior Software Developer.</p>
+        </div>
+            <a id="projectBtn" href="#projects"> <svg>
+                <rect x="0" y="0" fill="none" width="100%" height="100%"/>
+              </svg>
+              PROJECTS
+            </a>
     </div>
         
     </div>
