--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayisha Alli | Portfolio Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <script src="https://kit.fontawesome.com/97364d0a43.js" crossorigin="anonymous"></script>
     
 </head>
@@ -32,7 +32,8 @@
             </h2>
             <p id="introParagraph">My name is Ayisha Alli and I am a Junior Software Developer.</p>
         </div>
-            <a id="projectBtn" href="#projects"> <svg>
+            <a id="projectBtn" href="#projects">
+                <svg>
                 <rect x="0" y="0" fill="none" width="100%" height="100%"/>
               </svg>
               PROJECTS
