working on project section , working on layout and added second project and btns

--- a/index.html
+++ b/index.html
@@ -46,10 +46,15 @@
         <h2 id="projectsTitle">PROJECTS</h2>
         <div class="row">
             <div class="col-md">
-                <figure><img src="/photos/screenshot.jpg" alt="Order Summary Card screenshot" width="400px" height="400px"><figcaption>Order Summary Card Replica</figcaption></figure>
+                <figure><img src="/photos/screenshot.jpg" alt="Order Summary Card screenshot" width="400px" height="400px">
+                    <figcaption>Order Summary Card Replica 
+                    <a href="https://colorflipperbyayisha.netlify.app/">Live Site</a> 
+                    <a href="https://github.com/AyishaAlli/Color-Flipper">Source Code</a> 
+                </figcaption>
+            </figure>
             </div>
             <div class="col-md">
-                <figure><img src="/photos/screenshot.jpg" alt="Order Summary Card screenshot" width="400px" height="400px"><figcaption>Order Summary Card Replica</figcaption></figure>
+                <figure><img src="/photos/Screenshot 2021-10-30 at 11.33.55.png" alt="Order Summary Card screenshot" width="400px" height="400px"><figcaption>Order Summary Card Replica</figcaption></figure>
             </div>
             <div class="col-md">
                 <figure><img src="/photos/screenshot.jpg" alt="Order Summary Card screenshot" width="400px" height="400px"><figcaption>Order Summary Card Replica</figcaption></figure>
