added two more project templates

--- a/index.html
+++ b/index.html
@@ -47,14 +47,28 @@
         <div class="row">
             <div class="col-md">
                 <figure><img src="/photos/screenshot.jpg" alt="Order Summary Card screenshot" width="400px" height="400px">
-                    <figcaption> <h4>Order Summary Card Replica </h4> 
+                    <figcaption> <h5>Order Summary Card Replica<br><span>HTML & CSS5</span></h5> 
+                    <a href="https://ordersummary-1009.netlify.app/">Live Site</a> 
+                    <a href="https://github.com/AyishaAlli/order-summary-component">Source Code</a> 
+                </figcaption>
+            </figure>
+            </div>
+            <div class="col-md">
+                <figure><img src="/photos/Screenshot 2021-10-30 at 11.33.55.png" alt="Color flipper screenshot" width="400px" height="400px">
+                    <figcaption> <h5>Color Flipper<br>HTML, CSS5, JavaScript</h5> 
                     <a href="https://colorflipperbyayisha.netlify.app/">Live Site</a> 
                     <a href="https://github.com/AyishaAlli/Color-Flipper">Source Code</a> 
                 </figcaption>
             </figure>
             </div>
-            
-        
+            <div class="col-md">
+                <figure><img src="/photos/screenshot.jpg" alt="Order Summary Card screenshot" width="400px" height="400px">
+                    <figcaption> <h5>Order Summary Card Replica</h5> 
+                    <a href="https://colorflipperbyayisha.netlify.app/">Live Site</a> 
+                    <a href="https://github.com/AyishaAlli/Color-Flipper">Source Code</a> 
+                </figcaption>
+            </figure>
+            </div>
         </div>
     <div id="contactMe">
         <h2 id="ConnectWithMeTitle">
