worked on spacing

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul class="navList hidden">
             <a href="#aboutMeSection"><li>ABOUT ME</li></a>
             <a href="#projects"><li>PROJECTS</li></a>
-            <a href="#contactMe"><li>CONTACT ME</li></a>
+            <a href="#contactMe"><li>CONTACT</li></a>
         </ul>
     </nav>
     <div class="aboutMeSection">
@@ -62,10 +62,10 @@
             </figure>
             </div>
             <div class="col-md">
-                <figure><img src="/photos/screenshot.jpg" alt="Order Summary Card screenshot" width="400px" height="400px">
-                    <figcaption> <h5>Order Summary Card Replica</h5> 
-                    <a href="https://colorflipperbyayisha.netlify.app/">Live Site</a> 
-                    <a href="https://github.com/AyishaAlli/Color-Flipper">Source Code</a> 
+                <figure><img src="/photos/guessmynum.png" alt="guess my number game screenshot" width="400px" height="400px">
+                    <figcaption> <h5>Guess my number game<br>HTML, CSS, Vanilla JavaScript</h5> 
+                    <a href="https://guessmynumbergamebyayisha.netlify.app/">Live Site</a> 
+                    <a href="https://github.com/AyishaAlli/guess-my-number-game">Source Code</a> 
                 </figcaption>
             </figure>
             </div>
