made navbar fully responsive

--- a/index.html
+++ b/index.html
@@ -8,17 +8,22 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/style.css">
     <script src="https://kit.fontawesome.com/97364d0a43.js" crossorigin="anonymous"></script>
-    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <nav>
         <h1>AyishaAlli.</h1>
-        <i class="hidden hamburger fa-2x fas fa-bars"></i>
-        <ul class="navList hidden">
+        <div class="hamburger">
+            <i class="fa-2x fas fa-bars"></i>
+        </div>
+        <ul class="navList">
             <a href="#aboutMeSection"><li>ABOUT ME</li></a>
             <a href="#projects"><li>PROJECTS</li></a>
             <a href="#contactMe"><li>CONTACT</li></a>
         </ul>
+        <div class="close">
+            <i class="fas fa-2x fa-times"></i>
+          </div>
     </nav>
     <div class="aboutMeSection">
         <div class="text">
