removed dropdown menu when a link is clicked on

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <i class="fa-2x fas fa-bars"></i>
         </div>
         <ul class="navList">
-            <a href="#projects"><li>PROJECTS</li></a>
-            <a href="#contactMe"><li>CONTACT</li></a>
+            <a class="projectBtn" href="#projects"><li>PROJECTS</li></a>
+            <a class="contactBtn" href="#contactMe"><li>CONTACT</li></a>
         </ul>
         <div class="close">
             <i class="fas fa-2x fa-times"></i>
