--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
     <div id="contactMe">
         <h2 id="ConnectWithMeTitle">
-         Connect With Me
+         Contact Me
         </h2>
         <div class="socialMediaIcons">
          <a href="mailto:alli.ayisha1@gmail.com?subject=Hello!" target="_blank">
