updated social media links

--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
          <a href="mailto:alli.ayisha1@gmail.com?subject=Hello!" target="_blank">
             <i class="fas fa-5x fa-envelope"></i>
          </a>
-         <a href=""> 
+         <a href="https://github.com/AyishaAlli"> 
             <i class="fab fa-5x fa-github"></i>
          </a>
-         <a href="">
+         <a href="https://www.instagram.com/ayishaalli_dev/">
             <i class="fab fa-5x fa-instagram"></i>
          </a>
-         <a href="">
+         <a href="https://twitter.com/Ayishaalli_dev">
             <i class="fab fa-5x fa-twitter"></i>
          </a>
         </div>
