changed opening text

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <span>o</span>
                 <span>!</span>
             </h2>
-            <p id="introParagraph">My name is Ayisha Alli and I am a Junior Software Developer.</p>
+            <p id="introParagraph">My name is Ayisha Alli and I am a Junior Frontend Web Developer.</p>
         </div>
             <a id="projectBtn" href="#projects">
                 <svg>
