changed background colour

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
             <div class="col-md">
                 <figure><img src="/photos/tipcalc.png" alt="Order Summary Card screenshot" width="400px" height="400px">
-                    <figcaption> <h5>Tip Calculator<br><span>HTML & CSS</span></h5> 
+                    <figcaption> <h5>Tip Calculator<br><span>HTML, CSS & JavaScript</span></h5> 
                     <a href="https://tipcalcbyayisha.netlify.app/">Live Site</a> 
                     <a href="https://github.com/AyishaAlli/tip-calculator">Source Code</a> 
                 </figcaption>
