used prettier to auto format and also took out project section to move it onto new page

--- a/index.html
+++ b/index.html
@@ -44,52 +44,16 @@
               PROJECTS
             </a>
     </div>
-        
-    </div>
+
 
     <div id="projects">
         <h2 id="projectsTitle">PROJECTS</h2>
-        <div class="row">
-            <div class="col-md">
-                <figure><img src="/photos/Screenshot 2021-10-30 at 11.33.55.png" alt="Color flipper screenshot" width="400px" height="400px">
-                    <figcaption> <h5>Color Flipper<br>HTML, CSS, Vanilla JavaScript</h5> 
-                        <a href="https://colorflipperbyayisha.netlify.app/">Live Site</a> 
-                        <a href="https://github.com/AyishaAlli/Color-Flipper">Source Code</a> 
-                    </figcaption>
-                </figure>
-            </div>
-            <div class="col-md">
-                <figure><img src="/photos/guessmynum.png" alt="guess my number game screenshot" width="400px" height="400px">
-                    <figcaption> <h5>Guess my number game<br>HTML, CSS, Vanilla JavaScript</h5> 
-                        <a href="https://guessmynumbergamebyayisha.netlify.app/">Live Site</a> 
-                        <a href="https://github.com/AyishaAlli/guess-my-number-game">Source Code</a> 
-                    </figcaption>
-                </figure>
-            </div>
-            <div class="col-md">
-                <figure><img src="/photos/screenshot.jpg" alt="Order Summary Card screenshot" width="400px" height="400px">
-                    <figcaption> <h5>Order Summary Card Replica<br><span>HTML & CSS</span></h5> 
-                    <a href="https://ordersummary-1009.netlify.app/">Live Site</a> 
-                    <a href="https://github.com/AyishaAlli/order-summary-component">Source Code</a> 
-                </figcaption>
-            </figure>
-            </div>
-            <div class="col-md">
-                <figure><img src="/photos/calcreplica.png" alt="calculator replica screenshot" width="400px" height="400px">
-                    <figcaption> <h5>Apple Calculator Replica<br><span>HTML & CSS</span></h5> 
-                    <a href="https://calculatorbyayisha.netlify.app/">Live Site</a> 
-                    <a href="https://github.com/AyishaAlli/Calculator">Source Code</a> 
-                </figcaption>
-            </figure>
-            </div>
-            <div class="col-md">
-                <figure><img src="/photos/tipcalc.png" alt="Order Summary Card screenshot" width="400px" height="400px">
-                    <figcaption> <h5>Tip Calculator<br><span>HTML, CSS & JavaScript</span></h5> 
-                    <a href="https://tipcalcbyayisha.netlify.app/">Live Site</a> 
-                    <a href="https://github.com/AyishaAlli/tip-calculator">Source Code</a> 
-                </figcaption>
-            </figure>
-            </div>
+        <div class="projectContainer">
+        <div class="projectGroup"></div>
+        <div class="projectGroup"></div>
+        <div class="projectGroup"></div>  
+        </div>
+        
         </div>
     <div id="contactMe">
         <h2 id="ConnectWithMeTitle">
