worked on layout for homepage and new project page

--- a/projectspage.html
+++ b/projectspage.html
@@ -1,5 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PROJECTS | AYISHA ALLI </title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles/style.css">
+    <script src="https://kit.fontawesome.com/97364d0a43.js" crossorigin="anonymous"></script>
+</head>
+<body>
+    <nav>
+        <h1>AyishaAlli.</h1>
+        <div class="hamburger">
+            <i class="fa-2x fas fa-bars"></i>
+        </div>
+        <ul class="navList">
+            <a class="projectBtn" href="#projects"><li>PROJECTS</li></a>
+            <a class="contactBtn" href="#contactMe"><li>CONTACT</li></a>
+        </ul>
+        <div class="close">
+            <i class="fas fa-2x fa-times"></i>
+          </div>
+    </nav>
+
+<h2 id="projectPageTitle">FRONTEND DEVELOPMET PROJECTS</h2>
+<div class="projectPageContainer">
 <div class="row">
-    <div>
+    <div class="projectItem">
         <figure><img src="/photos/Screenshot 2021-10-30 at 11.33.55.png" alt="Color flipper screenshot" width="400px" height="400px">
             <figcaption> <h5>Color Flipper<br>HTML, CSS, Vanilla JavaScript</h5> 
                 <a href="https://colorflipperbyayisha.netlify.app/">Live Site</a> 
@@ -7,7 +35,7 @@
             </figcaption>
         </figure>
     </div>
-    <div>
+    <div class="projectItem">
         <figure><img src="/photos/guessmynum.png" alt="guess my number game screenshot" width="400px" height="400px">
             <figcaption> <h5>Guess my number game<br>HTML, CSS, Vanilla JavaScript</h5> 
                 <a href="https://guessmynumbergamebyayisha.netlify.app/">Live Site</a> 
@@ -15,7 +43,7 @@
             </figcaption>
         </figure>
     </div>
-    <div>
+    <div class="projectItem">
         <figure><img src="/photos/screenshot.jpg" alt="Order Summary Card screenshot" width="400px" height="400px">
             <figcaption> <h5>Order Summary Card Replica<br><span>HTML & CSS</span></h5> 
             <a href="https://ordersummary-1009.netlify.app/">Live Site</a> 
@@ -23,7 +51,7 @@
         </figcaption>
     </figure>
     </div>
-    <div>
+    <div class="projectItem">
         <figure><img src="/photos/calcreplica.png" alt="calculator replica screenshot" width="400px" height="400px">
             <figcaption> <h5>Apple Calculator Replica<br><span>HTML & CSS</span></h5> 
             <a href="https://calculatorbyayisha.netlify.app/">Live Site</a> 
@@ -31,14 +59,15 @@
         </figcaption>
     </figure>
     </div>
-    <div>
+    <div class="projectItem">
         <figure><img src="/photos/tipcalc.png" alt="Order Summary Card screenshot" width="400px" height="400px">
             <figcaption> <h5>Tip Calculator<br><span>HTML, CSS & JavaScript</span></h5> 
             <a href="https://tipcalcbyayisha.netlify.app/">Live Site</a> 
             <a href="https://github.com/AyishaAlli/tip-calculator">Source Code</a> 
         </figcaption>
     </figure>
-    <div>
+</div>
+    <div class="projectItem">
         <figure><img src="/photos/screenshot.jpg" alt="Order Summary Card screenshot" width="400px" height="400px">
             <figcaption> <h5>Order Summary Card Replica<br><span>HTML & CSS</span></h5> 
             <a href="https://ordersummary-1009.netlify.app/">Live Site</a> 
@@ -46,4 +75,10 @@
         </figcaption>
     </figure>
     </div>
-    </div>
+</div>
+<footer>
+    &copy; <p>2021 AYISHAALLI.COM</p>
+        </footer>
+<script src="/app.js"></script>
+</body>
+</html>
