--- a/frontendprojects.html
+++ b/frontendprojects.html
@@ -10,19 +10,9 @@
     <script src="https://kit.fontawesome.com/97364d0a43.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav>
-        <h1>AyishaAlli.</h1>
-        <div class="hamburger">
-            <i class="fa-2x fas fa-bars"></i>
-        </div>
-        <ul class="navList">
-            <a class="projectBtn" href="#projects"><li>PROJECTS</li></a>
-            <a class="contactBtn" href="#contactMe"><li>CONTACT</li></a>
-        </ul>
-        <div class="close">
-            <i class="fas fa-2x fa-times"></i>
-          </div>
-    </nav>
+   <div class="backBtn">
+       <a href="/index.html#projects"><i class="fas fa-2x fa-arrow-left"></i></a>
+   </div>
 
 <h2 id="projectPageTitle">FRONTEND DEVELOPMET PROJECTS</h2>
 <div class="projectPageContainer">
