--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <i class="fa-2x fas fa-bars"></i>
         </div>
         <ul class="navList">
-            <a class="projectBtn" href="/projectspage.html"><li>PROJECTS</li></a>
+            <a class="projectBtn" href="#projects"><li>PROJECTS</li></a>
             <a class="contactBtn" href="#contactMe"><li>CONTACT</li></a>
         </ul>
         <div class="close">
@@ -51,7 +51,7 @@
         <div class="projectContainer">
         <div id="frontEndApp" class="projectGroup">
             
-            <p>FRONTEND APPLICATIONS</p>
+           <a href="/frontendprojects.html"><p>FRONTEND APPLICATIONS</p></a> 
         </div>
         <div id="uxuiCaseStudies" class="projectGroup"><p>UXUI<br>COMING SOON</p></div>
         
