added new frontend project

--- a/frontendprojects.html
+++ b/frontendprojects.html
@@ -58,10 +58,13 @@
     </figure>
 </div>
     <div class="projectItem">
-        <figure><img src="/photos/screenshot.jpg" alt="Order Summary Card screenshot" width="400px" height="400px">
-            <figcaption> <h5>Order Summary Card Replica<br><span>HTML & CSS</span></h5> 
-            <a href="https://ordersummary-1009.netlify.app/">Live Site</a> 
-            <a href="https://github.com/AyishaAlli/order-summary-component">Source Code</a> 
+        <figure><img src="/photos/spotify.png" alt="Spotify homepagescreenshot" width="400px" height="400px">
+            <figcaption> <h5>Spotify Replica<br><span>JavaScript PHP and MySQL
+            </span></h5> 
+            COMING SOON!
+            <!---
+         <a href="https://ordersummary-1009.netlify.app/">Live Site</a> 
+            <a href="https://github.com/AyishaAlli/order-summary-component">Source Code</a> -->
         </figcaption>
     </figure>
     </div>
