made project page responsive

--- a/frontendprojects.html
+++ b/frontendprojects.html
@@ -18,7 +18,7 @@
 <div class="projectPageContainer">
 <div class="row">
     <div class="projectItem">
-        <figure><img src="/photos/Screenshot 2021-10-30 at 11.33.55.png" alt="Color flipper screenshot" width="400px" height="400px">
+        <figure><img src="/photos/Screenshot 2021-10-30 at 11.33.55.png" alt="Color flipper screenshot" width="400" height="400">
             <figcaption> <h5>Color Flipper<br>HTML, CSS, Vanilla JavaScript</h5> 
                 <a href="https://colorflipperbyayisha.netlify.app/">Live Site</a> 
                 <a href="https://github.com/AyishaAlli/Color-Flipper">Source Code</a> 
@@ -26,7 +26,7 @@
         </figure>
     </div>
     <div class="projectItem">
-        <figure><img src="/photos/guessmynum.png" alt="guess my number game screenshot" width="400px" height="400px">
+        <figure><img src="/photos/guessmynum.png" alt="guess my number game screenshot" width="400" height="400">
             <figcaption> <h5>Guess my number game<br>HTML, CSS, Vanilla JavaScript</h5> 
                 <a href="https://guessmynumbergamebyayisha.netlify.app/">Live Site</a> 
                 <a href="https://github.com/AyishaAlli/guess-my-number-game">Source Code</a> 
@@ -34,7 +34,7 @@
         </figure>
     </div>
     <div class="projectItem">
-        <figure><img src="/photos/screenshot.jpg" alt="Order Summary Card screenshot" width="400px" height="400px">
+        <figure><img src="/photos/screenshot.jpg" alt="Order Summary Card screenshot" width="400" height="400">
             <figcaption> <h5>Order Summary Card Replica<br><span>HTML & CSS</span></h5> 
             <a href="https://ordersummary-1009.netlify.app/">Live Site</a> 
             <a href="https://github.com/AyishaAlli/order-summary-component">Source Code</a> 
@@ -42,7 +42,7 @@
     </figure>
     </div>
     <div class="projectItem">
-        <figure><img src="/photos/calcreplica.png" alt="calculator replica screenshot" width="400px" height="400px">
+        <figure><img src="/photos/calcreplica.png" alt="calculator replica screenshot" width="400" height="400">
             <figcaption> <h5>Apple Calculator Replica<br><span>HTML & CSS</span></h5> 
             <a href="https://calculatorbyayisha.netlify.app/">Live Site</a> 
             <a href="https://github.com/AyishaAlli/Calculator">Source Code</a> 
@@ -50,7 +50,7 @@
     </figure>
     </div>
     <div class="projectItem">
-        <figure><img src="/photos/tipcalc.png" alt="Order Summary Card screenshot" width="400px" height="400px">
+        <figure><img src="/photos/tipcalc.png" alt="Order Summary Card screenshot" width="400" height="400">
             <figcaption> <h5>Tip Calculator<br><span>HTML, CSS & JavaScript</span></h5> 
             <a href="https://tipcalcbyayisha.netlify.app/">Live Site</a> 
             <a href="https://github.com/AyishaAlli/tip-calculator">Source Code</a> 
@@ -58,7 +58,7 @@
     </figure>
 </div>
     <div class="projectItem">
-        <figure><img src="/photos/spotify.png" alt="Spotify homepagescreenshot" width="400px" height="400px">
+        <figure><img src="/photos/spotify.png" alt="Spotify homepagescreenshot" width="400" height="400">
             <figcaption> <h5>Spotify Replica<br><span>JavaScript PHP and MySQL
             </span></h5> 
             COMING SOON!
