--- a/skaterwaycs.html
+++ b/skaterwaycs.html
@@ -6,15 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Skater Way Case Study | Ayisha's Portfolio</title>
     <link rel="stylesheet" href="/styles/style.css">
+    <script src="https://kit.fontawesome.com/97364d0a43.js" crossorigin="anonymous"></script>
 </head>
-<body>
-    <section id="skaterWaySecOne">
-        <img src="/photos/skaterwaypics/sectionone.png" alt="App design layout">
+<body id="body">
+    <div class="backBtn">
+        <a href="/index.html"><i class="fas fa-arrow-left"></i></a> 
+    </div>
+    
+    <section id="sw1">
+        <img src="/photos/1to10slides.png" alt="">
     </section>
-    <section id="skaterWaySecTwo">
-        <img src="/photos/skaterwaypics/section2.png" alt="">
+    <section id="sw2">
+        <img src="/photos/12to22slides.png" alt="">
     </section>
-    <section id="skaterWaySecThree"></section>
     
 </body>
 </html>
