--- a/frontendprojects.html
+++ b/frontendprojects.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="/styles/style.css">
     <script src="https://kit.fontawesome.com/97364d0a43.js" crossorigin="anonymous"></script>
 </head>
-<body>
+
+<body id="frontEndBody">
+
    <div class="backBtn">
        <a href="/index.html#projects"><i class="fas fa-2x fa-arrow-left"></i></a>
    </div>
@@ -43,7 +45,7 @@
     </div>
     <div class="projectItem">
         <figure><img src="/photos/calcreplica.png" alt="calculator replica screenshot" width="400" height="400">
-            <figcaption> <h5>Apple Calculator Replica<br><span>HTML & CSS</span></h5> 
+            <figcaption> <h5>Apple Calculator Replica<br><span>HTML, CSS, Vanilla JavaScript</span></h5> 
             <a href="https://calculatorbyayisha.netlify.app/">Live Site</a> 
             <a href="https://github.com/AyishaAlli/Calculator">Source Code</a> 
         </figcaption>
