--- a/skaterwaycs.html
+++ b/skaterwaycs.html
@@ -10,7 +10,7 @@
 </head>
 <body id="body">
     <div class="backBtn">
-        <a href="/index.html"><i class="fas fa-arrow-left"></i></a> 
+        <a href="/uxuidesign.html"><i class="fas fa-arrow-left"></i></a> 
     </div>
     
     <section id="sw1">
