--- a/frontendprojects.html
+++ b/frontendprojects.html
@@ -60,13 +60,10 @@
     </figure>
 </div>
     <div class="projectItem">
-        <figure><img src="/photos/spotify.png" alt="Spotify homepagescreenshot" width="400" height="400">
-            <figcaption> <h5>Spotify Replica<br><span>JavaScript PHP and MySQL
-            </span></h5> 
-            COMING SOON!
-            <!---
-         <a href="https://ordersummary-1009.netlify.app/">Live Site</a> 
-            <a href="https://github.com/AyishaAlli/order-summary-component">Source Code</a> -->
+        <figure><img src="/photos/snakegame.png" alt="Snake game screenshot" width="400" height="400">
+            <figcaption> <h5>Snake Gaame<br><span>HTML, CSS & JavaScript</span></h5> 
+            <a href="https://javascriptsnakegamebyayisha.netlify.app/">Live Site</a> 
+            <a href="https://github.com/AyishaAlli/JavaScriptSnakeGame">Source Code</a> 
         </figcaption>
     </figure>
     </div>
