--- a/uxuidesign.html
+++ b/uxuidesign.html
@@ -16,12 +16,13 @@
        <a href="/index.html#projects"><i class="fas fa-2x fa-arrow-left"></i></a>
    </div>
 
-<h2 id="projectPageTitle">FRONTEND DEVELOPMET PROJECTS</h2>
+<h2 id="projectPageTitle">UXUI PROJECTS</h2>
 <div class="projectPageContainer">
 <div class="row">
     <div class="projectItem">
-        <figure><img src="/photos/skaterwayprofilepic.png" alt="Color flipper screenshot" width="400" height="400">
-            <figcaption> <h5>The Skater Way <br>Project set by The Pivot Lab</h5> 
+        <a href="/skaterwaycs.html">
+            <figure><img src="/photos/skaterwayprofilepic.png" alt="Color flipper screenshot" width="400" height="400">
+            <figcaption> <h5>The Skater Way <br>Project set by The Pivot Lab</h5></a>
                 <a href="/skaterwaycs.html">Full Case Study</a>
             </figcaption>
         </figure>
