--- a/frontendprojects.html
+++ b/frontendprojects.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -66,11 +66,19 @@
             <a href="https://github.com/AyishaAlli/tip-calculator">Source Code</a> 
         </figcaption>
     </figure>
-</div>
+    </div>
+    <div class="projectItem">
+        <figure><img src="/photos/tipcalc.png" alt="Website Repica" width="400" height="400">
+            <figcaption> <h5>Tip Calculator<br><span>HTML, CSS & JavaScript</span></h5> 
+            <a href="https://tipcalcbyayisha.netlify.app/">Live Site</a> 
+            <a href="https://github.com/AyishaAlli/tip-calculator">Source Code</a> 
+        </figcaption>
+        </figure>
+    </div>
 </div>
 <footer>
     &copy; <p>2021 AYISHAALLI.COM</p>
         </footer>
 <script src="/app.js"></script>
 </body>
-</html>
+</html> -->
